manifests/paperless/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
